# docs/swagger.yaml
@@ -174,6 +174,37 @@ paths:
       summary: Insert data Games.
       tags:
       - Games
+  /update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Ubah data games.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Payload Body [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.ReqGames'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Games'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Update data Games.
+      tags:
+      - Games
 schemes:
 - https
 - http
